@@ -3,6 +3,7 @@ serd (1.0.0) unstable;
   * Add SerdBuffer for mutable buffers to keep SerdChunk const-correct
   * Remove useless character counting from API
   * Use char* for strings in public API
+  * Rename SerdChunk to SerdStringView
 
  -- David Robillard <d@drobilla.net>  Sat, 19 Jan 2019 13:31:12 +0100
 
